<resources>
    <string name="app_name">FoamKart</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="new_user_creat_account">New user? Create an account!</string>
    <string name="enter_your_email_and_password_to_login">Enter your mobile no,mail and password to login.</string>
    <string name="email_address">Email address</string>
    <string name="mobileno">Mobile No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="skip"><![CDATA[Skip]]></string>
    <string name="signup">Sign Up</string>
    <string name="login_with">Login with</string>
    <string name="login">Login</string>
    <string name="crossed_price"><strike> ₹123499 </strike> </string>
    <string-array name="image_options">
        <item>Choose photo from gallery</item>
        <item>Take picture with camera</item>
    </string-array>
</resources>