<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">











        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/signup"
                android:textColor="@color/color_DarkText"
                android:textSize="@dimen/txt_bigXX" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:singleLine="true"
                android:text="@string/new_user_creat_account"
                android:textColor="@color/color_DarkText"
                android:textSize="@dimen/txt_mediumX" />

            <View
                android:layout_width="50sp"
                android:layout_height="3sp"
                android:layout_marginTop="10sp"
                android:background="@color/color_green"/>



            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/et_mobile"
                android:paddingLeft="10sp"
                android:gravity="left|center"
                android:textSize="@dimen/eighten"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:background="@drawable/pincodeedittext"
                android:textColor="@color/colorblack"
                android:hint="@string/mobileno" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/et_email"
                android:paddingLeft="10sp"
                android:gravity="left|center"
                android:textSize="@dimen/eighten"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:background="@drawable/pincodeedittext"
                android:textColor="@color/colorblack"
                android:hint="@string/email" />


            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/et_password"
                android:paddingLeft="10sp"
                android:gravity="left|center"
                android:textSize="@dimen/eighten"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:background="@drawable/pincodeedittext"
                android:textColor="@color/colorblack"
                android:hint="@string/password" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:id="@+id/radioGroup1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="I have referral code"
                    android:id="@+id/radioButton3"
                    android:checked="true"
                    android:textSize="12dp" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_gravity="center_horizontal"
                    android:text="I don't have referral code"
                    android:id="@+id/radioButton4"
                    android:checked="false"
                    android:textSize="12dp"
                    />
            </RadioGroup>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="@dimen/txt_50sp"
                android:background="@drawable/btn_rounded_red"
                android:text="@string/proceed"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/txt_15sp"
                android:textColor="@android:color/white" />








            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/txt_15sp"
                android:id="@+id/btn_sinin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/color_White"
                    android:gravity="center"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:singleLine="true"
                    android:text="@string/already_have_account"
                    android:textColor="@color/color_DarkText"
                    android:textSize="@dimen/txt_mediumX" />


                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/txt_5sp"
                    android:background="@color/color_White"
                    android:gravity="center"
                    android:paddingTop="10sp"
                    android:paddingRight="10sp"
                    android:paddingBottom="10sp"
                    android:singleLine="true"
                    android:text="@string/signin"
                    android:textColor="@color/color_green"
                    android:textSize="@dimen/txt_mediumX" />

            </LinearLayout>



        </LinearLayout>




    </ScrollView>

</RelativeLayout>